# TEMPLATE_CMake-Crossplatform

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.sh  cmake.sh
src/: main.cpp
toolchains/: linux-toolchain.cmake  windows-toolchain.cmake
